[gd_scene load_steps=9 format=3 uid="uid://cjof0umc2t3qt"]

[ext_resource type="Script" path="res://SadClown.gd" id="1_hl46v"]
[ext_resource type="Script" path="res://TilemapObject.gd" id="2_kuvlj"]
[ext_resource type="Script" path="res://CreatureSprite.gd" id="3_uk14y"]
[ext_resource type="Script" path="res://Pathfinder.gd" id="4_5o14c"]
[ext_resource type="Texture2D" uid="uid://cff5pygu1bhld" path="res://sprites/laugh_face_back.png" id="5_jnp5g"]
[ext_resource type="Texture2D" uid="uid://ccrgyhm8lnuf7" path="res://sprites/laugh_face_purple.png" id="6_l8uy4"]
[ext_resource type="Script" path="res://LaughMeter.gd" id="7_eu40y"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_23dfk"]
load_path = "res://.godot/imported/sadclown_sheet.png-37e7bf8b72d8485d28960475b6e7b84f.ctex"

[node name="SadClown" type="Sprite2D"]
position = Vector2(-121, 8)
texture = SubResource("CompressedTexture2D_23dfk")
region_enabled = true
region_rect = Rect2(0, 0, 14, 15)
script = ExtResource("1_hl46v")
talk_position = Vector2i(6, 7)
text_speed = 0.025

[node name="TilemapObject" type="Node" parent="."]
script = ExtResource("2_kuvlj")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
z_index = 10
offset_left = -8.0
offset_top = -26.0
offset_right = 341.0
offset_bottom = 20.0
scale = Vector2(0.377024, 0.377024)
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.337255)
theme_override_colors/font_outline_color = Color(0.00392157, 0.129412, 0.772549, 1)
theme_override_constants/shadow_outline_size = 15
theme_override_constants/outline_size = 5
text = "The quick brown fox
jumps over the lazy dog"
fit_content = true
scroll_active = false
autowrap_mode = 0
text_direction = 1

[node name="CreatureSprite" type="Node" parent="."]
script = ExtResource("3_uk14y")
animate_speed = 5.0
sprite_size = Vector2i(14, 15)
sprite_cells = Vector2i(4, 3)

[node name="JokeCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Pathfinder" type="Node" parent="."]
script = ExtResource("4_5o14c")

[node name="LaughMeter" type="TextureProgressBar" parent="."]
z_index = 2
layout_direction = 1
offset_left = -8.0
offset_top = -26.0
offset_right = 8.0
offset_bottom = -10.0
max_value = 16.0
step = 0.1
fill_mode = 3
texture_under = ExtResource("5_jnp5g")
texture_progress = ExtResource("6_l8uy4")
script = ExtResource("7_eu40y")
laugh_sources = Array[String](["laugh"])
drain_rate = 0.0

[node name="Timer" type="Timer" parent="LaughMeter"]
process_callback = 0
wait_time = 0.75
